2006-08-10  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* modulesets/gnome-2.16.modules: Added nautilus-sendto,
	but it is not included by default (just like
	nautilus-open-terminal)

2006-08-09  Frederic Peters  <fpeters@0d.be

	* jhbuild/frontends/autobuild.py: retry on socket errors.

2006-08-08  Thomas Wood  <thos@gnome.org>

	* modulesets/gnome-2.16.modules: gnome-themes now depends on
	icon-naming-utils

2006-08-06  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* modulesets/gnome-2.16.modules: Use gnome-2-16 branch
	for dasher.

2006-08-04  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.14.modules: libwnck, bug-buddy and gail have a
	gnome-2-14 branch. I'm sure some other modules have one...
	Fix bugs #347398, #347493

2006-07-30  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.16.modules: use distutils for pyspi and dogtail
	since it is their native method and it is now supported.

2006-07-30  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.1{2,4,6}.modules: iso-codes moved from CVS
	to Subversion.  Patch by Marc-Andre Lureau.  Closes: #349327.

2006-07-26  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.16.modules: gnome-session depends on
	gnome-keyring

2006-07-25  Elijah Newren  <newren gmail com>

	* modulesets/bootstrap.modules: Add pyrex so that modules like
	dbus-python will build.  James wasn't sure where to put it (here
	or freedesktop.modules) but I put it here because I think it needs
	to be installed in the same place as python so this seems natural.
	James might change this later.  See #311563.

2006-07-25  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/autobuild.py: rename encode_log to compress_data.

2006-07-25  Luca Ferretti  <elle.uca@libero.it>

	* patches/scrollkeeper_clean_xml_validation_context.patch: new file
	* patches/scrollkeeper_language_fix.patch: new file
	* patches/scrollkeeper_rw_offset_fix.patch: new file
	* modulesets/gnome-2.*: apply patches needed by scroollkeeper to make