@@ -1,10 +1,15 @@
+2006-08-10  Frederic Peters  <fpeters@0d.be>
+
+	* Makefile: removed changecvsroot.py from make dist; it has been moved
+	to scripts/; added scripts/ and its content to make dist.
+
 2006-08-10  Wouter Bolsterlee  <uws+gnome@xs4all.nl>
 
 	* modulesets/gnome-2.16.modules: Added nautilus-sendto,
 	but it is not included by default (just like
 	nautilus-open-terminal)
 
-2006-08-09  Frederic Peters  <fpeters@0d.be
+2006-08-09  Frederic Peters  <fpeters@0d.be>
 
 	* jhbuild/frontends/autobuild.py: retry on socket errors.
 
